--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,20 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>סופרים וזוכרים</title>
 
   <base href="/" />
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+
+  <meta property="og:url" content="https://www.sofrim.co.il" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="סופרים וזוכרים" />
+  <meta property="og:description" content="לזכרו של רועי מינץ זל" />
+  <meta property="og:image" content="https://www.sofrim.co.il/assets/start.jpg" />'
+  <meta property="fb:app_id" content="652670708251189" />
 
   <link rel="icon" type="image/png" href="assets/logoColor.png" />
 
