--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="https://www.sofrim.co.il/assets/start.jpg" />'
   <meta property="fb:app_id" content="652670708251189" />
 
-  <link rel="icon" type="image/png" href="assets/logoColor.png" />
+  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
